Sugati/src/objects/Selected_ICC_Copy__c.object
<CustomObject>
    <fields>
        <fullName>SICCO_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Selected Itinerary Content Category</label>
        <referenceTo>Selected_Itinerary_Content_Category__c</referenceTo>
        <relationshipLabel>Selected ICCs Copy</relationshipLabel>
        <relationshipName>Selected_ICCs_Copy</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SICCO_Confirmation_Letter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confirmation Letter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SICCO_Content__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Content</label>
        <referenceTo>Itinerary_Content__c</referenceTo>
        <relationshipLabel>Selected ICCs Copy</relationshipLabel>
        <relationshipName>Selected_ICCs_Copy</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SICCO_Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Selected ICCs Copy</relationshipLabel>
        <relationshipName>Selected_ICCs_Copy</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SICCO_Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SICCO_FinalDoc__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FinalDoc</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SICCO_Order__c</fullName>
        <label>Order</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>998</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>999</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SICCO_Title__c</fullName>
        <label>Title</label>
        <type>TextArea</type>
    </fields>
    <label>Selected ICC Copy</label>
    <nameField>
        <displayFormat>SICCO-{0000000000}</displayFormat>
        <label>Selected ICC Copy ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Selected ICCs Copy</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>